[workspace]
resolver = "2"
members = [
  "src/common",
  "src/meta-cli",
  "src/metagen",
  "src/metagen/src/mdk_rust/static",
  "src/mt_deno",
  "src/typegate/engine",
  "src/typegate/standalone",
  "src/typegraph/core", 
  "src/xtask",
]

exclude = [
  "tests/runtimes/wasm_reflected/rust",
  "tests/runtimes/wasm_wire/rust",
  "tests/metagen/typegraphs/sample/rs",
  "src/pyrt_wit_wire",
]

[workspace.package] 
version = "0.4.9"
edition = "2021"

[workspace.dependencies]

# internal crates
mt_deno = { path = "src/mt_deno/" }
common = { path = "src/common/" }
metagen = { path = "src/metagen/" }
typegate_engine = { path = "src/typegate/engine" }

# cli
clap = "=4.5.13"
clap_complete = "=4.5.12"
clap-verbosity-flag = "2.2.1"
colored = "2.0.4"
dialoguer = "0.11.0"
self_update = "0.39.0"
tabled = "0.15.0"
# FIXME: use main branch when deno move to 1.37
lade-sdk = { git = "https://github.com/zifeo/lade", branch = "fix/loosen-deps" }
git2 = { version = "0.18.3", default-features = false }

# http
reqwest = "0.11"
url = "2.4"

# build
shadow-rs = "0.28.0"

# encoding
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33" # FIXME: deprecated, be on the lookout for alternatives
serde_with = "3.8.1"
flate2 = "1.0.30"
tar = "0.4"
base64 = "0.22.1"
zstd = "0.13"
convert_case = "0.6.0"
strip-ansi-escapes = "0.2.0"
heck = "0.5.0-rc.1"
sha2 = "0.10.8"
seahash = "4.1.0"

# patterns
anyhow = "1.0.86" # FIXME: replace anyhow with eyre
color-eyre = "0.6.3"
eyre = "0.6.12" # NOTE: keep in sync with verison used by color-eyre
thiserror = "1.0.61"
indoc = "2.0.5"
unindent = "0.2.3"
itertools = "0.13.0"
lazy_static = "1.4.0" # FIXME: replace with Lazy Cell
crossbeam-channel = "0.5.13"
enum_dispatch = "0.3.13"
tap = "1.0.1"
derive_more = "0.99.17"
cached = "0.51.3" # FIXME: replace usage with a Lazy Cell + dashmap
garde = "0.18"
paste = "1.0.15"

# os
ctrlc = "3.4.4"
rand = "0.8.5"
# FIXME: go back to published crate when deno move to 1.37
process-wrap = { git = "https://github.com/metatypedev/process-wrap", branch = "fix/decrement-tokio-version" }
nix = "0.29.0"

# fs
tempfile = "3.10.1"
num_cpus = "1.16.0"
normpath = "1.2.0"
directories = "5.0.1"
include_dir = "0.7.3"
grep = "0.3.1"
filetime = "0.2.23"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
ignore = "0.4.20"
glob = "0.3.1"
globset = "0.4.14"
pathdiff = "0.2.1"
textwrap = "0.16.1"
project-root = "0.2.2"

# data structures
regex = "1.10.4"
once_cell = "1.19.0"
indexmap = { version = "2.2.6", features = ["serde"] }
semver = "1.0.23"
dashmap = "5.5.3"
connection-string = "0.2.0"
chrono =  "0.4.38"
tera = { version = "1.20", default-features = false }
ordered-float = "4.2.0"
graphql-parser = "0.4.0"

# wasm
wasmtime = "21.0.0"
wasmtime-wasi = "21.0.0"
wit-bindgen = "0.26.0"

# deno
# deno = { path =  "../deno/cli" }
deno = { git = "https://github.com/metatypedev/deno", branch = "v1.46.1-embeddable" }
deno_core = { version = "=0.306.0" }

# logging
env_logger = "=0.11.0"
log = "0.4.20" # FIXME: replace with tracing
tracing = "0.1"
# tracing core helper
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot", "tracing-log"] }
# backtrace for async frames
tracing-error = "0.2"
# `unwrap` that also logs
tracing-unwrap = { version = "1.0.1", features = ["log-location"] }
# collect traces to file
tracing-appender = "0.2.3"

# async
futures = "0.3.30"
futures-concurrency = "7.6"
futures-lite = "2.3"
tokio = { version = "1.36.0", features = ["parking_lot"] }
async-trait = "0.1.80"
actix = "0.13.3"

# temporal
temporal-client = { git = "https://github.com/temporalio/sdk-core", rev = "7f9755b" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core", rev = "7f9755b" }

# prisma
query-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
query-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
datamodel-renderer = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
user-facing-errors = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
query-engine-metrics = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
schema-core = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
psl = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
schema-connector = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }

# test
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
insta = "1.39.0"
ptree = "0.4.0"
