[tool.poetry]
name = "metatype"
version = "0.3.2"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
typegraph = { path = "typegraph/python", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
respx = "^0.20.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
