[tool.poetry]
name = "metatype"
version = "0.4.8-0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
typegraph = { path = "typegraph/python", develop = true }

[tool.poetry.group.dev.dependencies]
respx = "^0.21.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
