# The main thing we need to install into the local
# venv is the typegraph itself. 
# The tests for the typegraph import the typegraph from
# venv and not directly from the python source.
# Use `build-tgraph-py` task to build and install the typegraph.

[tool.poetry]
name = "metatype"
version = "0.5.1-rc.6"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typegraph = { path = "src/typegraph/python", develop = true }

[tool.poetry.group.dev.dependencies]
# used in ./tests/importers/*.py
respx = "^0.22.0"
# used in examples/programmable-api-gateway
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
