[package]
name = "meta-cli"
version = "0.4.3-0"
edition = "2021"

description = "Declarative API development platform. Build backend components with WASM, Typescript and Python, no matter where and how your (legacy) systems are."
authors = ["Metatype Contributors <support@metatype.dev>"]
license-file = "../dev/LICENSE-MPL-2.0.md"
homepage = "https://metatype.dev"
documentation = "https://metatype.dev"
repository = "https://github.com/metatypedev/metatype"
include = ["src"]
keywords = ["api", "composition", "typesystem", "graphql", "ecosystem"]
categories = [
  "accessibility",
  "api-bindings",
  "data-structures",
  "development-tools",
  "wasm",
]
build = "build.rs"

[[bin]]
name = "meta"
path = "src/main.rs"

[features]
default = []
typegate = ["dep:typegate_engine"]

[dependencies]
# internal
typegate_engine = { workspace = true, optional = true }
common.workspace = true
typescript.workspace = true
metagen = { workspace = true, features = ["multithreaded"] }

# data structures
chrono = { version = "0.4.38", features = ["serde"] }
semver = "1.0.23"
indexmap.workspace = true

# patterns
once_cell.workspace = true
lazy_static = "1.4.0"
crossbeam-channel = "0.5.13"
itertools = "0.13.0"
enum_dispatch = "0.3.13"
derive_more = "0.99.17"
indoc.workspace = true

# concurrency
tokio = { workspace = true, features = ["full"] }
futures = "0.3.30"
async-trait = "0.1.80"
async-recursion = "1.1.1"
num_cpus = "1.16.0"

# cli
shadow-rs.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
clap-verbosity-flag = "2.2.0"
ctrlc = "3.4.4"
question = "0.2.2"
dialoguer = "0.11.0"
self_update = { version = "0.39.0", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
  "compression-zip-bzip2",
] }

# codecs
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
flate2 = "1.0.30"
tar = "0.4.40"
base64 = "0.22.1"
# FIXME: deprecated, be on the lookout for alternatives
serde_yaml = "0.9.33"

# fs
normpath = "1.2.0"
directories = "5.0.1"
include_dir = "0.7.3"
grep = "0.3.1"
filetime = "0.2.23"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
ignore = "0.4.20"
globset = "0.4.14"
pathdiff = "0.2.1"
textwrap = "0.16.1"

# http
reqwest = { workspace = true, features = ["json"] }
actix = "0.13.3"
actix-web = "4.6.0"
tiny_http = "0.12.0"

# logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
tracing-unwrap.workspace = true
tracing-appender.workspace = true
color-eyre.workspace = true

# misc
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
nix = { version = "0.29.0", features = ["signal"] }
lade-sdk = "0.9.1"
git2 = { version = "0.18.3", features = [
  "vendored-libgit2",
], default-features = false }
process-wrap = { version = "8.0.2", features = ["tokio1"] }

[dev-dependencies]
# testing
assert_cmd = "2.0.14"
insta = "1.39.0"
# fs
project-root = "0.2.2"
tempfile.workspace = true

[build-dependencies]
shadow-rs.workspace = true
