[package]
name = "meta-cli"
version = "0.4.8"
edition = "2021"

description = "Declarative API development platform. Build backend components with WASM, Typescript and Python, no matter where and how your (legacy) systems are."
authors = ["Metatype Contributors <support@metatype.dev>"]
license-file = "../dev/LICENSE-MPL-2.0.md"
homepage = "https://metatype.dev"
documentation = "https://metatype.dev"
repository = "https://github.com/metatypedev/metatype"
include = ["src"]
keywords = ["api", "composition", "typesystem", "graphql", "ecosystem"]
categories = [
    "accessibility",
    "api-bindings",
    "data-structures",
    "development-tools",
    "wasm",
]
build = "build.rs"

[[bin]]
name = "meta"
path = "src/main.rs"

[features]
default = []
typegate = ["dep:typegate_engine"]

[dependencies]
tabled = "0.15.0"

# internal
typegate_engine = { workspace = true, optional = true }
common.workspace = true
metagen.workspace = true

# data structures
chrono = { version = "0.4.38", features = ["serde"] }
semver = "1.0.23"
indexmap.workspace = true

# patterns
once_cell.workspace = true
lazy_static = "1.4.0"
crossbeam-channel = "0.5.13"
itertools.workspace = true
enum_dispatch = "0.3.13"
derive_more = "0.99.17"
indoc.workspace = true
cached = { version = "0.51.3", features = ["proc_macro", "async"] }

# concurrency
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
futures-concurrency.workspace = true
async-trait.workspace = true
num_cpus = "1.16.0"

# cli
shadow-rs.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
clap-verbosity-flag = "2.2.0"
ctrlc = "3.4.4"
dialoguer = "0.11.0"
self_update = { version = "0.39.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "compression-zip-bzip2",
] }

# codecs
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
flate2.workspace = true
tar.workspace = true
# FIXME: deprecated, be on the lookout for alternatives
serde_yaml = "0.9.33"
base64.workspace = true
strip-ansi-escapes = "0.2.0"

# fs
normpath = "1.2.0"
directories = "5.0.1"
include_dir = "0.7.3"
grep = "0.3.1"
filetime = "0.2.23"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
ignore = "0.4.20"
globset = "0.4.14"
pathdiff = "0.2.1"
textwrap = "0.16.1"
tempfile.workspace = true

# http
reqwest = { workspace = true, features = ["json"] }
actix = "0.13.3"

# logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
tracing-unwrap.workspace = true
# tracing-appender.workspace = true
color-eyre.workspace = true

# misc
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "5.6.0" }
nix = { version = "0.29.0", features = ["signal"] }
lade-sdk = { git = "https://github.com/zifeo/lade", branch = "main" }
git2 = { version = "0.18.3", features = [
    "vendored-libgit2",
], default-features = false }
process-wrap = { version = "8.0.2", features = ["tokio1"] }
rand = "0.8.5"

[dev-dependencies]
# testing
assert_cmd = "2.0.14"

# fs
project-root = "0.2.2"

[build-dependencies]
shadow-rs.workspace = true
