[tool.poetry]
name = "typegraph"
version = "0.0.3-dev.1"
description = "Free and open ecosystem for API composition."
authors = [
    "Metatype Contributors <support@metatype.dev>",
]
license = "ELv2"
homepage = "https://metatype.dev"
repository = "https://github.com/metatypedev/metatype"
include = [
    "typegraph/**/*",
    "LICENSE.md"
]
keywords = [
    "api",
    "composition",
    "typesystem",
    "graphql",
    "ecosystem"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
]

[tool.poetry.scripts]
py-tg = "typegraph.utils.loaders:cmd"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = {extras = ["http2"], version = ">=0.22,<0.24"}
orjson = "^3.8.4"
redbaron = "^0.9.2"
python-box = "^6.1.0"
frozendict = "2.3.4"
semver = "^2.13.0"
PyYAML = "^6.0"
deepmerge = "^1.1.0"
graphql-core = "^3.2.3"
gql = {extras = ["requests"], version = "^3.4.0"}
ordered-set = "^4.1.0"
typing-extensions = "^4.4.0"
attrs = "^22.2.0"
astunparse = "^1.6.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
pydoc-markdown = {git = "https://github.com/metatypedev/pydoc-markdown", branch = "develop"}
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
