[tool.poetry]
name = "typegraph"
version = "0.1.6"
description = "Compose your data, anywhere, and build iterative API blocks with zero-trust and serverless deployment, no matter where and how your (legacy) systems are."
authors = ["Metatype Contributors <support@metatype.dev>"]
license = "ELv2"
homepage = "https://metatype.dev"
repository = "https://github.com/metatypedev/metatype"
include = ["typegraph/**/*", "LICENSE.md"]
keywords = ["api", "composition", "typesystem", "graphql", "ecosystem"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
]

[tool.poetry.scripts]
py-tg = "typegraph.utils.loaders:cmd"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = { extras = ["http2"], version = "^0.24.0" }
redbaron = "^0.9.2"
frozendict = "^2.3.7"
semver = "^3.0.0"
PyYAML = "^6.0"
deepmerge = "^1.1.0"
graphql-core = "^3.2.3"
ordered-set = "^4.1.0"
typing-extensions = "^4.5.0"
attrs = "^22.2.0"
astunparse = "^1.6.3"
black = "^23.3.0"
strenum = "^0.4.10"
python-box = "^7.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-snapshot = "^0.9.0"
pydoc-markdown = { git = "https://github.com/metatypedev/pydoc-markdown", branch = "develop" }
ruff = "^0.0.261"
respx = "^0.20.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = ".."
venv = ".venv"
