[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typegraph = { path = "../typegraph", develop = true }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
