[tool.poetry]
name = "website"
version = "0.0.2-alpha.13"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typegraph = { path = "../typegraph", develop = true }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
