[tool.poetry]
name = "website"
version = "0.0.2-alpha.14"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
typegraph = { path = "../typegraph", develop = true }

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
