[package]
name = "test_util"
version = "0.2.4-0+dev"
edition = "2021"
publish = false

[lib]
name = "test_util"
path = "lib.rs"

[[bin]]
name = "test_server"
path = "test_server.rs"

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1", "http2", "runtime"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.85"
serde_repr = "=0.1.16"
rustls = "0.21.0"
tokio-rustls = "0.24.0"
reqwest = { version = "0.11.20", default-features = false, features = [
  "rustls-tls",
  "stream",
  "gzip",
  "brotli",
  "socks",
  "json",
] }
parking_lot = "0.12.0"
os_pipe = "=1.1.4"
url = { version = "2.3.1", features = ["serde", "expose_internals"] }
tempfile = "3.4.0"
regex = "^1.7.0"
lazy-regex = "3"
semver = "1"
termcolor = "1.1.3"
monch = "=0.4.3"
h2 = "0.3.17"
fastwebsockets = { version = "=0.4.4", features = ["upgrade"]}
rustls-pemfile = "1.0.0"
async-stream = "0.3.3"

pretty_assertions.workspace = true
anyhow.workspace = true
futures.workspace = true
bytes.workspace = true
tar.workspace = true
flate2.workspace = true
ring.workspace = true
console_static_text.workspace = true
glob.workspace = true
libc.workspace = true
tokio = { workspace = true, features = ["full"] }
once_cell.workspace = true
base64.workspace = true

[target.'cfg(windows)'.dependencies]
# fwdansi.workspace = true
junction = "=0.2.0"
winapi = { version = "=0.3.9", features = [
  "knownfolders",
  "mswsock",
  "objbase",
  "shlobj",
  "tlhelp32",
  "winbase",
  "winerror",
  "winsock2",
] }

[target.'cfg(unix)'.dependencies]
nix = "=0.26.2"
