[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }

[package.metadata]
wasm-opt = true

[profile.release]
lto = true
opt-level = "s"

