[package]
name = "common"
version = "0.4.8"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
flate2.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = "3.8.1"
tar.workspace = true
ignore = "0.4.20"
reqwest = { workspace = true, features = ["json"] }
url = { version = "2.4", features = ["serde"] }
async-trait = "0.1.74"
itertools = "0.11.0"
colored = "2.0.4"
indoc.workspace = true
thiserror.workspace = true
protobuf = "3.5.1"
