[package]
name = "mt_deno"
edition.workspace = true
version.workspace = true

[lib]
name = "mt_deno"
path = "lib.rs"

[dependencies]
# deno = { path =  "../../../deno/cli"}
deno = { git = "https://github.com/metatypedev/deno.git", rev = "d68e2fac48748d59a6a646f25e87f2988ddf8220" }
log = "0.4.20"
anyhow = "1.0.75"
